<resources>
    <string name="app_name">WaterEnvironment</string>
    <!--首页-->
    <string name="home_map">地图</string>
    <string name="home_statistics">统计</string>
    <string name="home_shebei">设备</string>
    <string name="home_station">站点</string>
    <string name="home_video">视频</string>
    <!--欢迎页-->
    <string name="wel_title">水环境网络化智慧监管系统</string>
    <string name="wel_text">中旭昊智能科技发展股份有限公司</string>
    <!--忘记密码-->
    <string name="forget_text">忘记密码?</string>
    <string name="password_text">密码</string>
    <string name="user_text">账号</string>
    <string name="register_uer">请输入注册时的手机号</string>
    <string name="img_pic">请输入右侧验证码</string>
    <string name="yanzhengma">请输入短信验证码</string>
    <string name="new_password">输入新密码</string>
    <string name="new_password_agin">重复确认新密码</string>
    <string name="old_password">输入旧密码</string>
    <string name="title_activity_wel">WelActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_new_paaword">NewPaawordActivity</string>
    <string name="title_activity_change_user_img_acivity">ChangeUserImgAcivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_set">SetActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
