<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_main"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <include layout="@layout/item_home_top" />

        <FrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="58dp"
            android:layout_marginTop="45dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/map_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_map"
                    android:layout_width="@dimen/home_img"
                    android:layout_height="@dimen/home_img"
                    android:src="@mipmap/home_map_unchoice" />

                <TextView
                    android:id="@+id/tv_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_map"
                    android:textColor="@color/home_text"
                    android:textSize="@dimen/text_home" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_statistics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_statistics"
                    android:layout_width="@dimen/home_img"
                    android:layout_height="@dimen/home_img"
                    android:src="@mipmap/home_tongji" />

                <TextView
                    android:id="@+id/tv_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_statistics"
                    android:textColor="@color/home_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_manage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_manage"
                    android:layout_width="@dimen/home_img"
                    android:layout_height="@dimen/home_img"
                    android:src="@mipmap/home_shebei" />

                <TextView
                    android:id="@+id/tv_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_shebei"
                    android:textColor="@color/home_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_maintenance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_maintenance"
                    android:layout_width="@dimen/home_img"
                    android:layout_height="@dimen/home_img"
                    android:src="@mipmap/home_station" />

                <TextView
                    android:id="@+id/tv_maintenance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_station"
                    android:textColor="@color/home_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_video"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_video"
                    android:layout_width="@dimen/home_img"
                    android:layout_height="@dimen/home_img"
                    android:src="@mipmap/home_vedio" />

                <TextView
                    android:id="@+id/tv_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_video"
                    android:textColor="@color/home_text" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>