<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context=".activity.ForgetActivity">

    <include
        layout="@layout/top_title"
        />

    <EditText
        android:id="@+id/ed_forget_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:hint="@string/register_uer"
        android:inputType="number"
        android:maxLength="11"
        android:padding="20dp"
        android:textColor="@color/text_login"
        android:textColorHint="@color/line"
        android:textSize="@dimen/text_frist" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_forget_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/img_pic"
            android:maxLength="4"
            android:padding="20dp"
            android:textColor="@color/text_login"
            android:textColorHint="@color/line"
            android:textSize="@dimen/text_frist" />

        <ImageView
            android:id="@+id/img_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:padding="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/ed_forget_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/yanzhengma"
            android:padding="20dp"
            android:textColor="@color/text_login"
            android:textColorHint="@color/line"
            android:textSize="@dimen/text_frist" />

        <TextView
            android:id="@+id/tv_getCode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:background="@color/text_main"
            android:gravity="center"
            android:padding="10dp"
            android:text="获取验证码"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="@dimen/text_frist" />
</LinearLayout>